<resources>
    <string name="app_name" translatable="false">RepuestosExpress</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="sign_in_google">Iniciar sesión con Google</string>
    <string name="sign_up">Registrarse</string>
    <string name="ventana_ingreso">Ventana de ingreso</string>
    <string name="repeatPassword">Repetir contraseña</string>
    <string name="email">Correo electrónico</string>
    <string name="required">Requerido</string>
    <string name="username">Nombre de usuario</string>
    <string name="error">Hubo un problema, inténtelo más tarde</string>
    <string name="different_password">Contraseñas distintas</string>
    <string name="created">creado correctamente</string>
    <string name="ok_credentials">Credenciales correctas</string>
    <string name="bad_credentials">Credenciales incorrectas</string>
    <string name="web_client_id" translatable="false">633452063295-rlh1bp7djjq01o16lfjvint93r45okbu.apps.googleusercontent.com</string>
    <string name="prefs_file" translatable="false">com.repuestosexpress.PREFERENCE_FILE_KEY</string>
    <string name="home">Inicio</string>
    <string name="realizar_pedido">Realizar pedido</string>
    <string name="cesta">Cesta</string>
    <string name="sugerencias">Sugerencias</string>
    <string name="novedades">Novedades</string>
    <string name="top_ventas">Top ventas</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="ajustes">Ajustes</string>
    <string name="logout_confirmation">¿Cerrar la sesión?</string>
    <string name="select_theme">Seleccionar tema</string>
    <string name="familias">Familias</string>
    <string name="precio_formato" translatable="false">%1$.2f€</string>
    <string name="precio_formato2">Precio: %1$.2f€</string>
    <string name="pendientes">Pendientes</string>
    <string name="finalizados">Finalizados</string>
    <string name="mis_pedidos">Mis pedidos</string>
    <string name="productos">Productos</string>
    <string name="añadir_cesta">Añadir a la cesta</string>
    <string name="comprar">Comprar ya</string>
    <string name="cantidad">"Cantidad: "</string>
    <string name="cantidad_formato">Cantidad: %1$d</string>
    <string name="producto_añadido">Producto agregado a la cesta</string>
    <string name="logout_description">Salir de la aplicación y volver a la página de registro</string>
    <string name="confirmacion_realizar_pedido">¿Seguro que quieres realizar este pedido?</string>
    <string name="eliminar">Eliminar</string>
    <string name="borrar_producto">Eliminar producto</string>
    <string name="informacion_borrar_producto">¿Quieres quitar este producto de la lista?</string>
    <string name="tramitar_pedido">Tramitar pedido</string>
    <string name="subtotal" translatable="false">Subtotal: %1$.2f€</string>
    <string name="cesta_vacia">No hay productos añadidos en tu cesta</string>
    <string name="pedido_realizado">PEDIDO REALIZADO</string>
    <string name="total" translatable="false">Total: %1$.2f€</string>
    <string name="estado">Estado: %1$s</string>
    <string name="pedido">Pedido</string>
    <string name="borrar">Borrar</string>
    <string name="cancelar_pedido">Cancelar pedido</string>
    <string name="informacion_eliminar_pedido">¿Estás seguro de que quieres cancelar este pedido?</string>
    <string name="error_eliminar_pedido">Error al eliminar el pedido</string>
    <string name="detalles_pedido">Detalles del pedido</string>
    <string name="pedido_cancelado">PEDIDO CANCELADO</string>
    <string name="fecha">Fecha: %1$s</string>
    <string name="id" translatable="false">ID: %1$s</string>
    <string name="usuario_creado">Usuario creado</string>
    <string name="filtro_por_id">Buscar por Id</string>
    <string name="filtro_familia">Buscar familia</string>
    <string name="filtro_producto">Buscar producto</string>
    <string name="contraseña_olvidada">He olvidado mi contraseña</string>
    <string name="restablecer">Restablecer contraseña</string>
    <string name="volver">Volver</string>
    <string name="correo_recuperacion_enviado">Correo de recuperación enviado</string>
    <string name="informacion_recuperacion_email">Indique la dirección de correo electrónico de la cuenta cuya contraseña desea restablecer:</string>
    <string name="añadir_direccion_pago">Añadir dirección y método de pago</string>
    <string name="direccion_envio">Dirección de envío</string>

    <string-array name="metodos_pago">
        <item>Reembolso</item>
        <item>Transferencia</item>
    </string-array>
    <string name="detalle_metodo_pago">Método de pago: %1$s</string>
    <string name="direccion">Direccion: %1$s</string>
    <string name="metodo_pago">Método de pago</string>


</resources>