<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/btn_Home"
        android:icon="@drawable/baseline_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/btn_Realizar"
        android:icon="@drawable/baseline_add_shopping_cart"
        android:title="@string/realizar_pedido"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/btn_Cesta"
        android:icon="@drawable/baseline_shopping_basket"
        android:title="@string/cesta"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/btn_pedidos"
        android:icon="@drawable/baseline_list"
        android:title="@string/mis_pedidos"
        app:showAsAction="ifRoom" />
</menu>